--- a/data/projects.json
+++ b/data/projects.json
@@ -33,7 +33,7 @@
     },
     {
       "id": 2,
-      "title": "Mediterráneamente w/ Bad Gyal",
+      "title": "Mediterraneamente w/ Bad Gyal",
       "year": "2024",
       "client": "ESTRELLA DAMM",
       "mainImage": "assets/images/AS-01.webp",
