--- a/data/projects.json
+++ b/data/projects.json
@@ -2,7 +2,7 @@
   "projects": [
     {
       "id": 1,
-      "title": "Time Out w/ Meritxell de Soto",
+      "title": "Meritxell de Soto",
       "year": "2024",
       "client": "TIME OUT",
       "mainImage": "assets/images/Meritxell de Soto x Time Out/2.webp",
