--- a/data/projects.json
+++ b/data/projects.json
@@ -103,11 +103,11 @@
       "title": "Ferran Torres",
       "year": "2024",
       "client": "Under Armour",
-      "mainImage": "assets/images/Ferran Torres Under Armour/FerranTorres x UnderArmour0175 A2_FULLRES còpia.webp",
+      "mainImage": "assets/images/Ferran Torres Under Armour/FerranTorres x UnderArmour0175 A2_FULLRES còpia.webp",
       "slides": [
         {
           "layout": "single-contain",
-          "images": ["assets/images/Ferran Torres Under Armour/FerranTorres x UnderArmour0175 A2_FULLRES còpia.webp"]
+          "images": ["assets/images/Ferran Torres Under Armour/FerranTorres x UnderArmour0175 A2_FULLRES còpia.webp"]
         },
         {
           "layout": "double-split-left-cover",
