Tami-Tsunami-replace

--- a/data/projects.json
+++ b/data/projects.json
@@ -160,7 +160,7 @@
         },
         {
           "layout": "double-split-left-cover",
-          "images": ["assets/images/Tami Tsunami/TAMITSUNAMI23392.webp", "assets/images/Tami Tsunami/TAMITSUNAMI23460.webp"]
+          "images": ["assets/images/Tami Tsunami/TAMITSUNAMI23392 (còpia) copia 2.jpg", "assets/images/Tami Tsunami/TAMITSUNAMI23460.webp"]
         },
         {
           "layout": "single-contain",
